# toy-dns

./: Cargo.toml  README.md  example-config.toml
.github/workflows/: rust.yml
openapi/: toy-dns.json
scripts/: add-aaaa.sh  add-srv.sh  delete-record.sh  dig-muffins.sh  get-records.sh
src/: client.rs  dns_data.rs  dns_server.rs  dropshot_server.rs  lib.rs
tests/: basic_test.rs
