[package]
name = "toy-dns"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "3.1", features = [ "derive" ] }
dropshot = "0.6.0"
serde = { version = "1.0", features = [ "derive" ] }
slog = { version = "2.5.0", features = [ "max_level_trace", "release_max_level_debug" ] }
tokio = { version = "1.17", features = [ "full" ] }
toml = "0.5"
trust-dns-server = "0.21"
