[package]
name = "toy-dns"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "3.1", features = [ "derive" ] }
progenitor = { git = "https://github.com/oxidecomputer/progenitor" }
dropshot = { git = "https://github.com/oxidecomputer/dropshot" }
serde = { version = "1.0", features = [ "derive" ] }
slog = { version = "2.5.0", features = [ "max_level_trace", "release_max_level_debug" ] }
slog-term = "2.7"
slog-async = "2.7"
slog-envlogger = "2.2"
tokio = { version = "1.17", features = [ "full" ] }
toml = "0.5"
trust-dns-server = "0.21"
trust-dns-proto = "0.21"
pretty-hex = "0.2.1"
schemars = "0.8"
sled = "0.34"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream"] }
structopt = "0.3"
portpicker = "0.1"
tempdir = "0.3"
